- Done boilerplate code for Setext headers. - Fixed MarkdownUtils.IsNewLine() throwing exception when an index passed that is   out of range of the string.

--- a/Markdown2Html/Markdown2Html.csproj
+++ b/Markdown2Html/Markdown2Html.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Source\Markdown2Html.cs" />
     <Compile Include="Source\MarkdownUtils.cs" />
     <Compile Include="Source\Parser.cs" />
+    <Compile Include="Source\SetextHeader.cs" />
     <Compile Include="Source\Strikethrough.cs" />
     <Compile Include="Source\ThematicBreak.cs" />
   </ItemGroup>
